--- a/src/work-caterinaStefano.ipynb
+++ b/src/work-caterinaStefano.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "id": "15479a1c",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "id": "1e229eaf-d667-466c-8238-8205257b0ccc",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "id": "75b272b9-b220-492b-adf6-509f9952842f",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "id": "f9c3f128-cf97-4bb3-8ce5-65c49f865d98",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "id": "0a11bbae",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "id": "a1be8c2d-c5da-4e04-bf67-7e43b1a71b7a",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "id": "74d19326",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "id": "34acce33",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
    "id": "1c90f901-1413-4356-bfa8-faf25fc494df",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 22,
    "id": "d51dbd7f-35b9-444a-9238-3af727c06411",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 23,
    "id": "05b96661",
    "metadata": {},
    "outputs": [],
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "id": "73ce2fd3",
    "metadata": {},
    "outputs": [],
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "id": "17ab34ab",
    "metadata": {},
    "outputs": [],
@@ -556,6 +556,219 @@
     "        return False\n",
     "    maxInDeg = max([G.in_degree(cc2fibre[c][0]) for c in commonColors])\n",
     "    return maxInDeg >= inDegThreshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "6cb6bf33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['VWF'], ['GP9'])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(node2columns[249],node2columns[253])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "c7919435",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 249\t 253\t-0.16± 0.00\t 0.30± 0.00 \t -0.4622268537416605\n",
+      "  77\t 112\t 0.51± 0.00\t 0.14± 0.00 \t 0.36765584214504116\n",
+      "  98\t  96\t 0.17± 0.05\t-0.19± 0.06 \t 0.35986670530281073\n",
+      "  13\t  46\t-0.16± 0.00\t 0.13± 0.00 \t -0.28861199652274705\n",
+      " 227\t  10\t-0.01± 0.00\t-0.30± 0.00 \t 0.2860620110113011\n",
+      " 198\t 173\t-0.06± 0.00\t 0.20± 0.00 \t -0.25911330049261083\n",
+      " 249\t 252\t-0.11± 0.00\t 0.14± 0.00 \t -0.2514994493423496\n",
+      "  25\t 231\t 0.05± 0.01\t 0.28± 0.18 \t -0.23309185743262822\n",
+      "  23\t  11\t-0.27± 0.11\t-0.04± 0.12 \t -0.2326137351492321\n",
+      "  62\t   7\t 0.00± 0.08\t-0.22± 0.04 \t 0.21926977687626775\n",
+      " 265\t  49\t 0.24± 0.11\t 0.02± 0.10 \t 0.21706751666183713\n",
+      "  27\t  34\t-0.14± 0.12\t-0.34± 0.10 \t 0.20588240172417813\n",
+      "  26\t  27\t 0.18± 0.01\t 0.38± 0.07 \t -0.19842893363646308\n",
+      " 226\t 227\t-0.06± 0.06\t 0.13± 0.13 \t -0.19681251811069256\n",
+      " 133\t 134\t-0.15± 0.14\t 0.04± 0.18 \t -0.19248526997005694\n",
+      " 249\t 251\t 0.14± 0.00\t 0.33± 0.00 \t -0.18984279040123606\n",
+      " 266\t 226\t-0.08± 0.00\t 0.10± 0.16 \t -0.1813387423935091\n",
+      " 258\t 227\t 0.15± 0.34\t-0.03± 0.27 \t 0.17971602434077075\n",
+      "  47\t  39\t-0.06± 0.01\t-0.24± 0.17 \t 0.17371776296725588\n",
+      "  77\t 229\t 0.11± 0.00\t 0.28± 0.00 \t -0.16256167392068305\n",
+      "   7\t 226\t 0.06± 0.04\t 0.22± 0.19 \t -0.15859171254708782\n",
+      "  88\t  89\t 0.07± 0.04\t-0.09± 0.06 \t 0.15725876557519558\n",
+      "  73\t 103\t-0.02± 0.00\t-0.18± 0.00 \t 0.15520139090118806\n",
+      "  13\t  34\t-0.29± 0.00\t-0.14± 0.00 \t -0.15450594030715734\n",
+      "  73\t  88\t-0.02± 0.00\t 0.13± 0.00 \t -0.15404230657780354\n",
+      "  96\t 100\t 0.04± 0.14\t-0.11± 0.01 \t 0.1511156186612576\n",
+      " 232\t 233\t-0.13± 0.17\t 0.02± 0.07 \t -0.14939372990462024\n",
+      "  14\t  65\t-0.00± 0.31\t 0.14± 0.30 \t -0.14890369941079878\n",
+      " 136\t 144\t 0.03± 0.05\t-0.11± 0.12 \t 0.1454071283685888\n",
+      "   0\t   1\t 0.37± 0.09\t 0.23± 0.06 \t 0.14212796029516256\n",
+      "  10\t 228\t-0.18± 0.00\t-0.32± 0.00 \t 0.1387423935091278\n",
+      " 246\t 247\t 0.25± 0.00\t 0.11± 0.00 \t 0.13370037670240506\n",
+      " 128\t 100\t-0.12± 0.00\t 0.01± 0.00 \t -0.12936306769514216\n",
+      "   0\t  44\t-0.13± 0.00\t-0.00± 0.00 \t -0.12902226309653236\n",
+      "  33\t  35\t 0.10± 0.32\t-0.03± 0.15 \t 0.12553734128833818\n",
+      " 206\t  67\t 0.11± 0.06\t 0.23± 0.05 \t -0.12436594013936275\n",
+      " 239\t 238\t-0.04± 0.15\t 0.08± 0.20 \t -0.12171292785593295\n",
+      "  33\t 265\t-0.01± 0.14\t-0.13± 0.01 \t 0.12123317405561125\n",
+      " 122\t  14\t-0.04± 0.11\t-0.16± 0.07 \t 0.11913455037187289\n",
+      " 213\t  67\t-0.13± 0.04\t-0.01± 0.10 \t -0.11885777465716525\n",
+      "  54\t 123\t-0.25± 0.00\t-0.36± 0.00 \t 0.11503911909591422\n",
+      "  23\t   7\t 0.39± 0.02\t 0.50± 0.02 \t -0.10753404810199951\n",
+      "  54\t  89\t-0.17± 0.07\t-0.28± 0.11 \t 0.10747609388583024\n",
+      " 165\t 120\t 0.04± 0.10\t-0.06± 0.18 \t 0.1013329469718922\n",
+      " 108\t 109\t 0.17± 0.09\t 0.06± 0.31 \t 0.10019854863644406\n",
+      "  19\t   7\t-0.03± 0.22\t-0.13± 0.15 \t 0.09903409639717958\n",
+      "  22\t  85\t-0.08± 0.13\t 0.01± 0.36 \t -0.0971892205157925\n",
+      "  27\t  29\t 0.40± 0.15\t 0.50± 0.10 \t -0.09623870557303155\n",
+      "  39\t  22\t 0.13± 0.00\t 0.04± 0.00 \t 0.0909881193856853\n",
+      "   2\t 238\t 0.03± 0.12\t-0.06± 0.16 \t 0.08977472756562416\n",
+      " 134\t 142\t-0.01± 0.16\t 0.08± 0.12 \t -0.08821657621521248\n",
+      "  47\t  83\t 0.03± 0.18\t-0.05± 0.26 \t 0.0852796290930165\n",
+      " 139\t 129\t-0.01± 0.28\t-0.10± 0.22 \t 0.08516372066067808\n",
+      "  73\t 102\t 0.03± 0.00\t 0.11± 0.00 \t -0.0830483917705013\n",
+      " 227\t 260\t-0.13± 0.18\t-0.21± 0.29 \t 0.08043911110500634\n",
+      " 209\t 153\t-0.07± 0.10\t-0.15± 0.11 \t 0.08001545445764514\n",
+      "  28\t  46\t-0.05± 0.25\t 0.03± 0.15 \t -0.07939727615184003\n",
+      " 237\t   2\t 0.07± 0.11\t-0.01± 0.08 \t 0.07619530570849029\n",
+      "  19\t  11\t 0.06± 0.21\t 0.14± 0.09 \t -0.07612769245629285\n",
+      "  24\t  25\t 0.16± 0.33\t 0.09± 0.31 \t 0.0746450304259635\n",
+      " 225\t 121\t-0.07± 0.16\t 0.00± 0.14 \t -0.07366666784930428\n",
+      "  83\t  22\t 0.06± 0.11\t 0.13± 0.17 \t -0.07306094851733799\n",
+      " 260\t   0\t-0.01± 0.31\t 0.06± 0.35 \t -0.07191514085332874\n",
+      " 207\t 206\t-0.20± 0.06\t-0.13± 0.03 \t -0.0704599812878006\n",
+      "  45\t  88\t 0.03± 0.13\t-0.04± 0.27 \t 0.0665314401622718\n",
+      "  89\t  91\t-0.21± 0.21\t-0.27± 0.09 \t 0.06557583711827952\n",
+      " 212\t 213\t 0.16± 0.26\t 0.09± 0.02 \t 0.06519849319037957\n",
+      " 161\t 162\t 0.02± 0.16\t-0.05± 0.12 \t 0.0639165578785695\n",
+      " 219\t 209\t 0.03± 0.05\t 0.10± 0.09 \t -0.06390444650474819\n",
+      "  66\t  67\t-0.03± 0.08\t 0.03± 0.16 \t -0.06374959738710548\n",
+      "  29\t  19\t 0.04± 0.09\t-0.03± 0.14 \t 0.06245532695836954\n",
+      "   9\t  10\t-0.07± 0.20\t-0.01± 0.12 \t -0.06052351975272866\n",
+      "  78\t  30\t 0.06± 0.12\t-0.00± 0.23 \t 0.060272384815995346\n",
+      "  54\t  14\t 0.12± 0.31\t 0.06± 0.17 \t 0.060001931807205616\n",
+      "  16\t 236\t-0.06± 0.24\t 0.00± 0.11 \t -0.0594900028977108\n",
+      "  13\t  28\t 0.18± 0.02\t 0.12± 0.05 \t 0.05861103061914423\n",
+      "   2\t 165\t 0.01± 0.14\t 0.07± 0.07 \t -0.058272964358157056\n",
+      " 232\t 234\t-0.02± 0.22\t 0.03± 0.19 \t -0.0580119468957489\n",
+      "  25\t  28\t 0.02± 0.20\t-0.04± 0.13 \t 0.05451559934318553\n",
+      "  16\t 229\t-0.00± 0.11\t 0.05± 0.20 \t -0.052883222254419\n",
+      " 239\t  33\t 0.09± 0.21\t 0.04± 0.26 \t 0.05082086159982259\n",
+      "  40\t  13\t 0.07± 0.12\t 0.02± 0.13 \t 0.04988161077311748\n",
+      " 136\t 237\t 0.06± 0.09\t 0.01± 0.08 \t 0.04947841205447695\n",
+      " 204\t  67\t 0.19± 0.00\t 0.14± 0.01 \t 0.04915333600916946\n",
+      " 162\t  16\t 0.02± 0.16\t-0.02± 0.14 \t 0.047346355598986076\n",
+      "  89\t  94\t-0.40± 0.01\t-0.44± 0.17 \t 0.04714575485366568\n",
+      "  14\t  66\t 0.12± 0.21\t 0.07± 0.17 \t 0.046394066178594776\n",
+      " 105\t  16\t 0.00± 0.18\t-0.04± 0.28 \t 0.04444122476576838\n",
+      "  45\t  13\t 0.00± 0.31\t-0.04± 0.13 \t 0.043697478991596636\n",
+      "  39\t  16\t-0.03± 0.12\t 0.02± 0.26 \t -0.043378730802665896\n",
+      "   6\t   7\t-0.06± 0.28\t-0.02± 0.27 \t -0.042259156240347026\n",
+      " 153\t  62\t 0.06± 0.05\t 0.01± 0.13 \t 0.04182362600212497\n",
+      " 109\t  16\t-0.05± 0.12\t-0.01± 0.15 \t -0.04111851637206606\n",
+      "  75\t 105\t 0.06± 0.18\t 0.02± 0.21 \t 0.04097599805113719\n",
+      " 197\t 198\t-0.01± 0.00\t 0.03± 0.00 \t -0.03998840915676615\n",
+      " 140\t 141\t 0.01± 0.11\t-0.03± 0.13 \t 0.03916862259178882\n",
+      "  54\t 126\t-0.02± 0.31\t 0.01± 0.29 \t -0.03863614411281753\n",
+      "  13\t  16\t 0.04± 0.17\t 0.07± 0.09 \t -0.03700376702405101\n",
+      "  49\t 226\t-0.03± 0.11\t 0.00± 0.32 \t -0.03538104897131265\n",
+      " 263\t 129\t-0.08± 0.23\t-0.11± 0.28 \t 0.03456968994494351\n",
+      " 194\t 199\t 0.10± 0.21\t 0.13± 0.23 \t -0.033376962868673976\n",
+      " 228\t  77\t 0.36± 0.00\t 0.33± 0.00 \t 0.03328115335983595\n",
+      "   0\t   4\t-0.08± 0.04\t-0.04± 0.13 \t -0.03219118364194936\n",
+      "  14\t  72\t 0.12± 0.04\t 0.09± 0.15 \t 0.03119865384909906\n",
+      " 130\t  45\t 0.06± 0.18\t 0.03± 0.17 \t 0.030672061687667063\n",
+      " 261\t 262\t-0.21± 0.11\t-0.18± 0.15 \t -0.030618681732640124\n",
+      " 129\t 130\t-0.07± 0.11\t-0.09± 0.12 \t 0.028880491764295524\n",
+      "  16\t 235\t 0.03± 0.15\t 0.01± 0.28 \t 0.028059499661933725\n",
+      " 264\t  33\t-0.00± 0.26\t 0.02± 0.09 \t -0.02765195092657343\n",
+      "   1\t 261\t 0.35± 0.11\t 0.33± 0.11 \t 0.026789528075590652\n",
+      "  40\t  28\t 0.01± 0.16\t 0.04± 0.19 \t -0.026480216798464774\n",
+      "  23\t  19\t-0.11± 0.20\t-0.14± 0.17 \t 0.024997585240992964\n",
+      "  16\t  14\t-0.00± 0.26\t 0.02± 0.16 \t -0.02489777520203484\n",
+      "  10\t 254\t 0.13± 0.00\t 0.15± 0.00 \t -0.021501014198783003\n",
+      "   9\t  13\t 0.05± 0.07\t 0.03± 0.26 \t 0.020651019028300962\n",
+      " 258\t 129\t-0.02± 0.22\t 0.00± 0.24 \t -0.020602723848159955\n",
+      " 208\t  16\t-0.05± 0.20\t-0.03± 0.14 \t -0.020052158794552292\n",
+      "  27\t  31\t 0.13± 0.21\t 0.11± 0.17 \t 0.019681112838981094\n",
+      "  54\t 124\t 0.02± 0.10\t 0.00± 0.08 \t 0.01802376122862939\n",
+      "  85\t   2\t-0.07± 0.08\t-0.09± 0.18 \t 0.016748768472906406\n",
+      "  50\t  51\t 0.04± 0.17\t 0.02± 0.19 \t 0.016699747988213273\n",
+      "  69\t  14\t 0.01± 0.20\t-0.00± 0.14 \t 0.01608551466563636\n",
+      " 218\t 130\t-0.03± 0.12\t-0.02± 0.16 \t -0.01596017609355857\n",
+      " 230\t 231\t 0.27± 0.00\t 0.25± 0.00 \t 0.015589684149521832\n",
+      "  14\t  88\t 0.20± 0.05\t 0.22± 0.15 \t -0.015357867284844978\n",
+      " 163\t 174\t-0.12± 0.41\t-0.14± 0.23 \t 0.01514536849222449\n",
+      "  12\t 262\t 0.04± 0.11\t 0.05± 0.15 \t -0.01437642271502744\n",
+      "  46\t  47\t 0.28± 0.02\t 0.27± 0.16 \t 0.014343668501883455\n",
+      " 234\t  16\t 0.02± 0.23\t 0.03± 0.21 \t -0.013570945619627177\n",
+      "  50\t   9\t 0.02± 0.18\t 0.01± 0.18 \t 0.013387967176685986\n",
+      " 115\t 117\t 0.01± 0.13\t 0.03± 0.15 \t -0.011811276234631784\n",
+      "  40\t  16\t 0.00± 0.17\t-0.01± 0.14 \t 0.011296359800141858\n",
+      "  75\t  46\t-0.07± 0.20\t-0.06± 0.21 \t -0.01041914511860361\n",
+      "  14\t  68\t-0.02± 0.20\t-0.01± 0.20 \t -0.010208983230088441\n",
+      "  12\t   6\t 0.03± 0.13\t 0.03± 0.17 \t 0.008718960567159848\n",
+      "  31\t  33\t-0.05± 0.06\t-0.05± 0.10 \t 0.007876141340986818\n",
+      "  83\t  16\t-0.03± 0.12\t-0.02± 0.19 \t -0.0076982517144788855\n",
+      " 162\t  85\t-0.12± 0.20\t-0.12± 0.20 \t 0.006922700607458157\n",
+      "  74\t  75\t 0.01± 0.16\t 0.01± 0.16 \t -0.0037759946479074876\n",
+      "  18\t  19\t 0.04± 0.11\t 0.04± 0.15 \t 0.003141772473116901\n",
+      " 231\t  16\t-0.06± 0.15\t-0.07± 0.23 \t 0.0023664638269100813\n",
+      " 116\t  16\t 0.00± 0.27\t-0.00± 0.25 \t 0.002329241795179452\n",
+      "  50\t  13\t 0.04± 0.15\t 0.04± 0.14 \t -0.0021328097924124823\n",
+      " 115\t 116\t-0.01± 0.10\t-0.01± 0.13 \t 0.0016295569945024187\n",
+      "  57\t  40\t 0.02± 0.17\t 0.02± 0.16 \t -1.4520381983219866e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "out = []\n",
+    "activationColors = set([])\n",
+    "for subtype, color in subtype2color.items():\n",
+    "    if \"activation\" in subtype:\n",
+    "        activationColors |= set([color])\n",
+    "for s,t,d in G.edges(data=True):\n",
+    "    if d[\"color\"] in activationColors:\n",
+    "        tausH = []\n",
+    "        tausD = []\n",
+    "        for sg in node2columns[s]:\n",
+    "            for tg in node2columns[t]:\n",
+    "                expr1 = genesHealthy.loc[:,sg].values.tolist()\n",
+    "                expr2 = genesHealthy.loc[:,tg].values.tolist()\n",
+    "                tausH += [scipy.stats.kendalltau(expr1, expr2).statistic]\n",
+    "                expr1 = genesDiseased.loc[:,sg].values.tolist()\n",
+    "                expr2 = genesDiseased.loc[:,tg].values.tolist()\n",
+    "                tausD += [scipy.stats.kendalltau(expr1, expr2).statistic]\n",
+    "        if len(tausH) == 0:\n",
+    "            continue\n",
+    "        meanH = pd.DataFrame(tausH).mean().values[0]\n",
+    "        meanD = pd.DataFrame(tausD).mean().values[0]\n",
+    "        if len(tausH) > 1:\n",
+    "            stdH = pd.DataFrame(tausH).std().values[0]\n",
+    "            stdD = pd.DataFrame(tausD).std().values[0]\n",
+    "        else:\n",
+    "            stdH = 0\n",
+    "            stdD = 0\n",
+    "        out += [(\"{:4d}\\t{:4d}\\t{:5.2f}±{:5.2f}\\t{:5.2f}±{:5.2f}\".format(s,t, meanH, stdH, meanD, stdD), meanH-meanD)]\n",
+    "out.sort(key=lambda x: abs(x[1]), reverse=True)\n",
+    "for o,v in out:\n",
+    "    print(o,\"\\t\",v)"
    ]
   },
   {
