Added computation by pathway

--- a/src/work-caterinaStefano.ipynb
+++ b/src/work-caterinaStefano.ipynb
@@ -29,20 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "6b13e6bf",
    "metadata": {},
    "outputs": [],
    "source": [
     "organismDict = {\"hsa\": \"Homo sapiens (human)\"}\n",
     "outputDirectory = \"/Users/boldi/Desktop/pw/\"\n",
-    "inputDirectory = \"../../LaTeX/Data/KEGG-Pathways/Nov2023/\"\n",
+    "inputDirectory = \"../../LaTeX/Data/KEGG-Pathways/Jan2024/\"\n",
     "dataDirectory = \"../../LaTeX/Data/KEGG-Pathways\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "3e6caae5",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "199b2487",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "bce1e1d2",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "cb8e2d96",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "47a38c39",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "8e0a74d1",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "id": "5ba5d2e0",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "id": "751bc16c",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "id": "bd27fdc2",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "id": "eaa01766",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "15479a1c",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "id": "1e229eaf-d667-466c-8238-8205257b0ccc",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "75b272b9-b220-492b-adf6-509f9952842f",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "id": "f9c3f128-cf97-4bb3-8ce5-65c49f865d98",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "id": "0a11bbae",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "id": "a1be8c2d-c5da-4e04-bf67-7e43b1a71b7a",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "74d19326",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "id": "34acce33",
    "metadata": {},
    "outputs": [],
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 49,
    "id": "1c90f901-1413-4356-bfa8-faf25fc494df",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building the relation graph\n"
+      "Building the relation graph\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n",
+      "Wrap: more than 148 colors needed\n"
      ]
     }
    ],
@@ -456,12 +473,14 @@
     "    if len(fibre) > 0:\n",
     "        ccnontrivial[v] = cc[v]\n",
     "        nontrivialclass2col[v] = colors[usedColors]\n",
-    "        usedColors += 1"
+    "        usedColors = (usedColors + 1 ) % len(colors)\n",
+    "        if usedColors == 0:\n",
+    "            print(\"Wrap: more than\", len(colors), \"colors needed\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "id": "d51dbd7f-35b9-444a-9238-3af727c06411",
    "metadata": {
     "scrolled": true
@@ -530,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "id": "73ce2fd3",
    "metadata": {},
    "outputs": [],
@@ -555,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "id": "00742eb4",
    "metadata": {},
    "outputs": [],
@@ -577,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "id": "b3232726",
    "metadata": {},
    "outputs": [],
@@ -613,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 54,
    "id": "2d3473f4",
    "metadata": {},
    "outputs": [
@@ -689,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 55,
    "id": "e517681e",
    "metadata": {},
    "outputs": [
@@ -697,13 +716,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P-value < 0.05:  17\n",
-      "Failing activations (green): 5\n",
-      "Failing inhibitions (blue): 1\n",
-      "Excessive activations (red): 7\n",
-      "Excessive inhibitions (orange): 0\n",
-      "Other types of relations (yellow): 4\n",
-      "Total: 17\n"
+      "P-value < 0.05:  681\n",
+      "Failing activations (green): 107\n",
+      "Failing inhibitions (blue): 31\n",
+      "Excessive activations (red): 131\n",
+      "Excessive inhibitions (orange): 37\n",
+      "Other types of relations (yellow): 375\n",
+      "Total: 681\n"
      ]
     }
    ],
@@ -921,8 +940,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "73c98af8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pathwayAnomalies = pd.DataFrame(columns=[\n",
+    "        \"Pathway ID\",\n",
+    "        \"Pathway\",\n",
+    "        \"Average square difference\",\n",
+    "        ])\n",
+    "for pair in superpathwayDict[superpathway]:\n",
+    "    pathwayID = pair[0]\n",
+    "    pathwayName= pair[1]\n",
+    "    ssqd = 0\n",
+    "    count = 0\n",
+    "    for relation in rel[pathwayID]:\n",
+    "        source = element2id[set2can(relation.source)]\n",
+    "        for targ in relation.target:\n",
+    "            target = element2id[set2can(targ)]\n",
+    "            tt = relcorrel[(relcorrel[\"Source node\"]==source) & (relcorrel[\"Target node\"]==target)]\n",
+    "            if len(tt) == 1 and tt[\"P-value\"].to_list()[0] <= confidence:\n",
+    "                cd = tt[\"Correlation difference (H-D)\"].to_list()[0]\n",
+    "                ssqd += cd * cd\n",
+    "            count += 1\n",
+    "    if count > 0:\n",
+    "        pathwayAnomalies.loc[len(pathwayAnomalies)]=[pathwayID, pathwayName, ssqd/count]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "ff411669-e133-48ac-86b9-dcc350d4d957",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pathway ID</th>\n",
+       "      <th>Pathway</th>\n",
+       "      <th>Average square difference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>309</th>\n",
+       "      <td>05412</td>\n",
+       "      <td>Arrhythmogenic right ventricular cardiomyopathy</td>\n",
+       "      <td>0.034466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>301</th>\n",
+       "      <td>05310</td>\n",
+       "      <td>Asthma</td>\n",
+       "      <td>0.019571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>00513</td>\n",
+       "      <td>Various types of N-glycan biosynthesis</td>\n",
+       "      <td>0.017224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>306</th>\n",
+       "      <td>05330</td>\n",
+       "      <td>Allograft rejection</td>\n",
+       "      <td>0.016775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>05320</td>\n",
+       "      <td>Autoimmune thyroid disease</td>\n",
+       "      <td>0.016775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <td>04310</td>\n",
+       "      <td>Wnt signaling pathway</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>04340</td>\n",
+       "      <td>Hedgehog signaling pathway</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>04350</td>\n",
+       "      <td>TGF-beta signaling pathway</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>04360</td>\n",
+       "      <td>Axon guidance</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>314</th>\n",
+       "      <td>05418</td>\n",
+       "      <td>Fluid shear stress and atherosclerosis</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>315 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Pathway ID                                          Pathway   \n",
+       "309      05412  Arrhythmogenic right ventricular cardiomyopathy  \\\n",
+       "301      05310                                           Asthma   \n",
+       "39       00513           Various types of N-glycan biosynthesis   \n",
+       "306      05330                              Allograft rejection   \n",
+       "302      05320                       Autoimmune thyroid disease   \n",
+       "..         ...                                              ...   \n",
+       "132      04310                            Wnt signaling pathway   \n",
+       "134      04340                       Hedgehog signaling pathway   \n",
+       "135      04350                       TGF-beta signaling pathway   \n",
+       "136      04360                                    Axon guidance   \n",
+       "314      05418           Fluid shear stress and atherosclerosis   \n",
+       "\n",
+       "     Average square difference  \n",
+       "309                   0.034466  \n",
+       "301                   0.019571  \n",
+       "39                    0.017224  \n",
+       "306                   0.016775  \n",
+       "302                   0.016775  \n",
+       "..                         ...  \n",
+       "132                   0.000000  \n",
+       "134                   0.000000  \n",
+       "135                   0.000000  \n",
+       "136                   0.000000  \n",
+       "314                   0.000000  \n",
+       "\n",
+       "[315 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pathwayAnomalies.sort_values(by=[\"Average square difference\"], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a24f06ae-b8e0-4eb5-a9fd-3fff0b777d17",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -930,9 +1122,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "newqf",
+   "display_name": "qf",
    "language": "python",
-   "name": "newqf"
+   "name": "qf"
   },
   "language_info": {
    "codemirror_mode": {
@@ -944,7 +1136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
