--- a/src/work-caterinaStefano.ipynb
+++ b/src/work-caterinaStefano.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "6b13e6bf",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "3e6caae5",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "199b2487",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "bce1e1d2",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "cb8e2d96",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "47a38c39",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "8e0a74d1",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "5ba5d2e0",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "751bc16c",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "bd27fdc2",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "eaa01766",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "15479a1c",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "1e229eaf-d667-466c-8238-8205257b0ccc",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "75b272b9-b220-492b-adf6-509f9952842f",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "id": "f9c3f128-cf97-4bb3-8ce5-65c49f865d98",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "0a11bbae",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "id": "a1be8c2d-c5da-4e04-bf67-7e43b1a71b7a",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "id": "74d19326",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "id": "34acce33",
    "metadata": {},
    "outputs": [],
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "id": "1c90f901-1413-4356-bfa8-faf25fc494df",
    "metadata": {},
    "outputs": [
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "id": "d51dbd7f-35b9-444a-9238-3af727c06411",
    "metadata": {
     "scrolled": true
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "id": "73ce2fd3",
    "metadata": {},
    "outputs": [],
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "id": "00742eb4",
    "metadata": {},
    "outputs": [],
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "id": "b3232726",
    "metadata": {},
    "outputs": [],
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "id": "2d3473f4",
    "metadata": {},
    "outputs": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "id": "e517681e",
    "metadata": {},
    "outputs": [
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "id": "73c98af8",
    "metadata": {},
    "outputs": [],
@@ -970,145 +970,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 30,
    "id": "ff411669-e133-48ac-86b9-dcc350d4d957",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Pathway ID</th>\n",
-       "      <th>Pathway</th>\n",
-       "      <th>Average square difference</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>309</th>\n",
-       "      <td>05412</td>\n",
-       "      <td>Arrhythmogenic right ventricular cardiomyopathy</td>\n",
-       "      <td>0.034466</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>301</th>\n",
-       "      <td>05310</td>\n",
-       "      <td>Asthma</td>\n",
-       "      <td>0.019571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>00513</td>\n",
-       "      <td>Various types of N-glycan biosynthesis</td>\n",
-       "      <td>0.017224</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>306</th>\n",
-       "      <td>05330</td>\n",
-       "      <td>Allograft rejection</td>\n",
-       "      <td>0.016775</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>302</th>\n",
-       "      <td>05320</td>\n",
-       "      <td>Autoimmune thyroid disease</td>\n",
-       "      <td>0.016775</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>04310</td>\n",
-       "      <td>Wnt signaling pathway</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>134</th>\n",
-       "      <td>04340</td>\n",
-       "      <td>Hedgehog signaling pathway</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>135</th>\n",
-       "      <td>04350</td>\n",
-       "      <td>TGF-beta signaling pathway</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>04360</td>\n",
-       "      <td>Axon guidance</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>314</th>\n",
-       "      <td>05418</td>\n",
-       "      <td>Fluid shear stress and atherosclerosis</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>315 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Pathway ID                                          Pathway   \n",
-       "309      05412  Arrhythmogenic right ventricular cardiomyopathy  \\\n",
-       "301      05310                                           Asthma   \n",
-       "39       00513           Various types of N-glycan biosynthesis   \n",
-       "306      05330                              Allograft rejection   \n",
-       "302      05320                       Autoimmune thyroid disease   \n",
-       "..         ...                                              ...   \n",
-       "132      04310                            Wnt signaling pathway   \n",
-       "134      04340                       Hedgehog signaling pathway   \n",
-       "135      04350                       TGF-beta signaling pathway   \n",
-       "136      04360                                    Axon guidance   \n",
-       "314      05418           Fluid shear stress and atherosclerosis   \n",
-       "\n",
-       "     Average square difference  \n",
-       "309                   0.034466  \n",
-       "301                   0.019571  \n",
-       "39                    0.017224  \n",
-       "306                   0.016775  \n",
-       "302                   0.016775  \n",
-       "..                         ...  \n",
-       "132                   0.000000  \n",
-       "134                   0.000000  \n",
-       "135                   0.000000  \n",
-       "136                   0.000000  \n",
-       "314                   0.000000  \n",
-       "\n",
-       "[315 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pathwayAnomalies.sort_values(by=[\"Average square difference\"], ascending=False)"
+    "relPathwayAnomalies = os.path.join(inputDirectory, \"pathway-anomalies-\" + correlationFunctionName + \".csv\")\n",
+    "pathwayAnomalies.sort_values(by=[\"Average square difference\"], ascending=False).to_csv(relPathwayAnomalies)"
    ]
   },
   {
