--- a/src/work-caterinaStefano-Nov2023.ipynb
+++ b/src/work-caterinaStefano-Nov2023.ipynb
@@ -29,20 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "6b13e6bf",
    "metadata": {},
    "outputs": [],
    "source": [
     "organismDict = {\"hsa\": \"Homo sapiens (human)\"}\n",
     "outputDirectory = \"/Users/boldi/Desktop/pw/\"\n",
-    "inputDirectory = \"../../LaTeX/Data/KEGG-Pathways/Jan2024/\"\n",
+    "inputDirectory = \"../../LaTeX/Data/KEGG-Pathways/Nov2023/\"\n",
     "dataDirectory = \"../../LaTeX/Data/KEGG-Pathways\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "3e6caae5",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "199b2487",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "bce1e1d2",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "cb8e2d96",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "47a38c39",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "8e0a74d1",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "5ba5d2e0",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "751bc16c",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "bd27fdc2",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "eaa01766",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "15479a1c",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "1e229eaf-d667-466c-8238-8205257b0ccc",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "75b272b9-b220-492b-adf6-509f9952842f",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "f9c3f128-cf97-4bb3-8ce5-65c49f865d98",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "0a11bbae",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "a1be8c2d-c5da-4e04-bf67-7e43b1a71b7a",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "74d19326",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "34acce33",
    "metadata": {},
    "outputs": [],
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "1c90f901-1413-4356-bfa8-faf25fc494df",
    "metadata": {},
    "outputs": [
@@ -416,24 +416,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building the relation graph\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n",
-      "Wrap: more than 148 colors needed\n"
+      "Building the relation graph\n"
      ]
     }
    ],
@@ -480,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "d51dbd7f-35b9-444a-9238-3af727c06411",
    "metadata": {
     "scrolled": true
@@ -516,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "05b96661",
    "metadata": {},
    "outputs": [],
@@ -549,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "73ce2fd3",
    "metadata": {},
    "outputs": [],
@@ -574,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "00742eb4",
    "metadata": {},
    "outputs": [],
@@ -596,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "b3232726",
    "metadata": {},
    "outputs": [],
@@ -632,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "2d3473f4",
    "metadata": {},
    "outputs": [
@@ -708,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "e517681e",
    "metadata": {},
    "outputs": [
@@ -716,13 +699,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P-value < 0.05:  681\n",
-      "Failing activations (green): 107\n",
-      "Failing inhibitions (blue): 31\n",
-      "Excessive activations (red): 131\n",
-      "Excessive inhibitions (orange): 37\n",
-      "Other types of relations (yellow): 375\n",
-      "Total: 681\n"
+      "P-value < 0.05:  17\n",
+      "Failing activations (green): 5\n",
+      "Failing inhibitions (blue): 1\n",
+      "Excessive activations (red): 7\n",
+      "Excessive inhibitions (orange): 0\n",
+      "Other types of relations (yellow): 4\n",
+      "Total: 17\n"
      ]
     }
    ],
@@ -774,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "32b16bfb",
    "metadata": {
     "scrolled": true
@@ -940,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "73c98af8",
    "metadata": {},
    "outputs": [],
@@ -970,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "ff411669-e133-48ac-86b9-dcc350d4d957",
    "metadata": {},
    "outputs": [],
