--- a/src/work-caterinaStefano-def.ipynb
+++ b/src/work-caterinaStefano-def.ipynb
@@ -1141,12 +1141,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "00742eb4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def corrForPair(genes, set1, set2, correlationFunction = lambda x: scipy.stats.kendalltau(x).statistic):\n",
+    "def corrForPair(genes, set1, set2, correlationFunction = lambda x,y: scipy.stats.kendalltau(x,y).statistic):\n",
     "    \"\"\"\n",
     "        Given a dataframe genes (i.e., a set of patients), and two sets of column names (set1, set2), \n",
     "        compute the correlation function\n",
@@ -1157,7 +1157,11 @@
     "        for gene2 in set2:\n",
     "            expr1 = genes.loc[:,gene1].values.tolist()\n",
     "            expr2 = genes.loc[:,gene2].values.tolist()\n",
-    "            taus += [scipy.stats.kendalltau(expr1, expr2).statistic]\n",
+    "            if len(set(expr1)) == 1 or len(set(expr2)) == 1:\n",
+    "                continue\n",
+    "            taus += [correlationFunction(expr1, expr2).statistic]\n",
+    "    if len(taus) < 2:\n",
+    "        return np.nan, np.nan\n",
     "    return pd.DataFrame(taus).mean().values[0], pd.DataFrame(taus).std().values[0]"
    ]
   },
@@ -1168,7 +1172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sampleDeltaDist(genes, set1, set2, numberOfRows1, numberOfSamples = 500, correlationFunction = lambda x: scipy.stats.kendalltau(x).statistic):\n",
+    "def sampleDeltaDist(genes, set1, set2, numberOfRows1, numberOfSamples = 500, correlationFunction = lambda x,y: scipy.stats.kendalltau(x,y).statistic):\n",
     "    \"\"\"\n",
     "        Repeatedly (for numberOfSamples times) do the following:\n",
     "        - select numberOfRows1 rows of genes, and then compute tauForPair on those rows for set1 and set2\n",
@@ -1182,12 +1186,16 @@
     "        genes1 = random.sample(range(len(genes)), numberOfRows1)\n",
     "        genes2 = list(set(range(len(genes)))-set(genes1))\n",
     "        mt1, mstd1 = corrForPair(genes.iloc[genes1], set1, set2, correlationFunction)\n",
+    "        if np.isnan(mp1):\n",
+    "            continue\n",
     "        mt2, mstd2 = corrForPair(genes.iloc[genes2], set1, set2, correlationFunction)\n",
+    "        if np.isnan(mp2):\n",
+    "            continue\n",
     "        diffs += [mt1-mt2]\n",
     "    return diffs\n",
     "\n",
     "\n",
-    "def deltaForPair(genes1, genes2, set1, set2, correlationFunction = lambda x: scipy.stats.kendalltau(x).statistic):\n",
+    "def deltaForPair(genes1, genes2, set1, set2, correlationFunction = lambda x,y: scipy.stats.kendalltau(x,y).statistic):\n",
     "    \"\"\"\n",
     "        Compute corrForPair for set1 and set2 over the set of rows genes1 and genes2, and return\n",
     "        the difference of taus.\n",
@@ -1223,7 +1231,7 @@
     }
    ],
    "source": [
-    "correlationFunction = lambda x:  scipy.stats.spearmanr(x).statistic\n",
+    "correlationFunction = lambda x,y:  scipy.stats.spearmanr(x,y).statistic\n",
     "correlationFunctionName = \"spearmanrho\"\n",
     "relAnomalies = os.path.join(inputDirectory, \"anomalies-\" + correlationFunctionName + \".csv\")\n",
     "\n",
@@ -1260,6 +1268,8 @@
     "        taudiff = avgh - avgd\n",
     "        ttn = sampleDeltaDist(genes, sg, tg, numHealthy, correlationFunction=correlationFunction)\n",
     "        tt = [x for x in ttn if ~np.isnan(x)]\n",
+    "        if len(tt) == 0:\n",
+    "            continue\n",
     "        ttmean = pd.DataFrame(tt).mean().values[0]\n",
     "        ecdft = scipy.stats.ecdf(tt)  # Empirical CDF\n",
     "        if taudiff < 0:\n",
@@ -1818,9 +1828,12 @@
     "                    col = reportlab.lib.colors.blue\n",
     "            else:\n",
     "                col = reportlab.lib.colors.yellow\n",
-    "            sdrawing.setLineWidth(3*math.exp(abs(corrdiff)*3))\n",
-    "            sdrawing.setStrokeColor(col)\n",
-    "            sdrawing.line(relation.sourceg.x, relation.sourceg.y, relation.targetg.x, relation.targetg.y)  "
+    "            if np.isnan(corrdif):\n",
+    "                print(f\"Correlation for {source} vs. {target} is {corrdiff}\")\n",
+    "            else:\n",
+    "                sdrawing.setLineWidth(3*math.exp(abs(corrdiff)*3))\n",
+    "                sdrawing.setStrokeColor(col)\n",
+    "                sdrawing.line(relation.sourceg.x, relation.sourceg.y, relation.targetg.x, relation.targetg.y)  "
    ]
   },
   {
@@ -3110,7 +3123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
